--- a/portofolio.html
+++ b/portofolio.html
@@ -155,7 +155,7 @@
     </div>
 
     <div class="card">
-      <img src="contoh3.png" alt="Design 3" />
+      <img src="desain web.png" alt="pembuatan website sederhana" />
       <h2>Pengembangan Website</h2>
       <p>Proyek pembuatan website. entry level</p>
       <a href="https://argifaiz.github.io/argifaiz/" class="btn-download" target="_blank" rel="noopener noreferrer">Lihat Desain</a>
