--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     a.button {
       display: inline-flex;
       align-items: center;
-      justify-content: center;
+      justify-content: flex-start;
       gap: 8px;
       background: #ffb703;
       padding: 10px 20px;
