--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
   display: flex;
   flex-direction: column; /* sejajar di desktop */
   justify-content: center;
+  min-width: 1.5em;
   gap: 5px;
 }
 
