--- a/index.html
+++ b/index.html
@@ -44,19 +44,21 @@
       gap: 10px;
     }
 
-    a.button {
-      background: #ffb703;
-      padding: 10px 20px;
-      color: #f8f9fa;
-      text-decoration: none;
-      border-radius: 8px;
-      width: 200px;
-      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
-      font-weight: bold;
-      transition: background-color 0.3s, transform 0.2s;
-      display: flex;
-      justify-content: center;
-    }
+   a.button {
+  background: #ffb703;
+  padding: 10px 20px;
+  padding-left: 25px; /* kasih ruang kiri lebih untuk menyesuaikan */
+  color: #f8f9fa;
+  text-decoration: none;
+  border-radius: 8px;
+  width: 200px;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
+  font-weight: bold;
+  transition: background-color 0.3s, transform 0.2s;
+  display: flex;
+  justify-content: flex-start; /* ubah dari center jadi flex-start */
+  align-items: center; /* biar vertikal juga center */
+   }
 
     a.button:hover {
       background-color: #e0a700;
