--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
         width: 100%;
         max-width: 300px;
         padding: 12px 0;
+        padding-left: 15px;
       }
 
       .welcome-box {
