--- a/selengkapnya.html
+++ b/selengkapnya.html
@@ -83,36 +83,37 @@
   </style>
 </head>
 <body>
-  <div class="container">
-    <h1>Selengkapnya tentang Saya</h1>
-    <p>Namaku Argi Faiz Alghiffari.</p>
-    <p>Aku lulusan dari Sekolah Menengah Kejuruan jurusan Bisnis Digital dan Pemasaran.</p>
-    <p>Aku memiliki interest di bidang bisnis seperti Analisis, Penjualan, Pemasaran, Manajemen, dan Sumber Daya Manusia.</p>
-
-    <div class="section-box">
-      <h2>🔭 I’m currently working on</h2>
-      <p>Saya sedang mengerjakan beberapa proyek website sederhana untuk belajar frontend dan mengenal GitHub Pages.</p>
-    </div>
-
-    <div class="section-box">
-      <h2>🌱 I’m currently learning</h2>
-      <p>Saat ini saya sedang belajar dasar-dasar HTML, CSS, dan JavaScript, serta memahami cara kerja GitHub untuk membangun website portofolio online.</p>
-    </div>
-
-    <div class="section-box">
-      <h2>👯 I’m looking to collaborate on</h2>
-      <p>Saya ingin kolaborasi dengan teman-teman lain yang juga sedang belajar coding, desain, bisnis atau yang suka bikin project kreatif bareng.</p>
-    </div>
-
-    <div class="section-box">
-      <h2>💬 Ask me about</h2>
-      <p>Kalau kamu juga belajar bikin website atau tertarik soal self-development remaja, bisa ngobrol bareng!</p>
-    </div>
-
-    <div class="section-box">
-      <h2>📫 How to reach me</h2>
-      <p>Kamu bisa hubungi saya lewat DM Instagram <b>@argifaiz_</b> atau email ke <b>argifaiz0111@email.com</b></p>
-    </div>
+  ‎<div class="container">
+‎    <h1>Selengkapnya tentang Saya</h1>
+‎    <p>Nama sayaArgi Faiz Alghiffari.</p>
+‎    <p>Saya lulusan dari Sekolah Menengah Kejuruan jurusan Bisnis Digital dan Pemasaran.</p>
+‎    <p>Saya memiliki interest di bidang Human Resource, HRBP, Business Analysis, Business Management, Sales, Marketing, Brand Strategist. </p>
+‎
+‎    <div class="section-box">
+‎      <h2>🔭 I’m currently working on</h2>
+‎      <p>Saya sedang melaksanakan PKL di sebuah perusahaan Travel.</p>
+‎    </div>
+‎
+‎    <div class="section-box">
+‎      <h2>🌱 I’m currently learning</h2>
+‎      <p>Saat ini saya sedang mempelajari Manajemen Bisnis, Manajemen Sumber daya Manusia, Sales, Brand & Marketing Strategist.</p>
+‎    </div>
+‎
+‎    <div class="section-box">
+‎      <h2>👯 I’m looking to collaborate on</h2>
+‎      <p>Saat ini saya membuka diri untuk ikut andil dalam projek yang berkaitan dengan Brand & Marketing Strategist, Script writing, Content Writing.</p>
+‎    </div>
+‎
+‎    <div class="section-box">
+‎      <h2>📋 Pengalaman</h2>
+‎      <p>Juara 1 lomba LKS tingkat Kota. menjadi Script dan content writer di Lomba Digital Marketing bagian Soft Selling dan Storytelling Marketing.</p>
+‎    </div>
+‎
+‎    <div class="section-box">
+‎      <h2>📫 How to reach me</h2>
+‎      <p>Kamu bisa hubungi saya lewat DM Instagram <b>@argifaiz_</b> atau email ke <b>argifaiz0111@email.com</b></p>
+‎    </div>
+‎
 
     <a href="index.html">⬅️ Kembali ke Halaman Utama</a>
   </div>
