--- a/portofolio.html
+++ b/portofolio.html
@@ -142,7 +142,7 @@
   <div class="portfolio-container">
     <div class="card">
       <img src="page 1 exixtensial crisis konten.png" alt="Design Copywriting 1" />
-      <h2>Design Copywriting 1</h2>
+      <h2>Design Content Writing </h2>
       <p>Desain konten Instagram untuk pengembangan diri. @jadiberkelas_.</p>
       <a href="https://www.instagram.com/jadiberkelas_" class="btn-download" target="_blank" rel="noopener noreferrer">Lihat Desain</a>
     </div>
