--- a/index.html
+++ b/index.html
@@ -125,6 +125,12 @@
         <span class="emoji">💼</span>
         <span class="label">Portofolio</span>
       </div>
+
+       <a href="contact.html" class="button">
+      <div class="button-content">
+        <span class="emoji">💬</span>
+        <span class="label">Contact</span>
+      </div>
     </a>
   </div>
 
