--- a/contact.html
+++ b/contact.html
@@ -155,7 +155,7 @@
 
     <div class="card">
       <img src="desain web.png" alt="whatsapp" />
-      <h2>Pengembangan Website</h2>
+      <h2>Whatsapp</h2>
       <p>Whatsapp business</p>
       <a href="wa.me/6282125416467" class="btn-download" target="_blank" rel="noopener noreferrer">Contact me</a>
     </div>
