--- a/contact.html
+++ b/contact.html
@@ -157,7 +157,7 @@
       <img src="desain web.png" alt="whatsapp" />
       <h2>Whatsapp</h2>
       <p>Whatsapp business</p>
-      <a href="wa.me/6282125416467" class="btn-download" target="_blank" rel="noopener noreferrer">Contact me</a>
+      <a href="https://api.whatsapp.com/send/?phone=6282125416467&text&type=phone_number&app_absent=0" class="btn-download" target="_blank" rel="noopener noreferrer">Contact me</a>
     </div>
   </div>
 
