--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
       color: #d1d1d1;
     }
 
-    .portfolio-container {
+    .contact-container {
       display: flex;
       flex-wrap: nowrap; /* default horizontal */
       justify-content: center;
@@ -114,7 +114,7 @@
         padding: 50px 10px; /* kecilkan padding kiri kanan */
       }
 
-      .portfolio-container {
+      .contact-container {
         flex-direction: column; /* vertikal */
         flex-wrap: nowrap;
         overflow-x: visible; /* hilangkan scroll horizontal */
@@ -135,10 +135,10 @@
 </head>
 <body>
 
-  <h1>Portofolio Saya</h1>
-  <p>Kumpulan projek yang pernah saya buat.</p>
+  <h1>Contact saya</h1>
+  <p>Tempat yang bisa anda hubungi.</p>
 
-  <div class="portfolio-container">
+  <div class="contact-container">
     <div class="card">
       <img src="page 1 exixtensial crisis konten.png" alt="Instagram" />
       <h2>Instagram </h2>
