--- a/contact.html
+++ b/contact.html
@@ -147,7 +147,7 @@
     </div>
 
     <div class="card">
-      <img src="Konsep video advertising.png" alt="Email" />
+      <img src="gmail logo.jpeg" alt="Email" />
       <h2>Email</h2>
       <p>Email pribadi saya: argifaiz0111@gmail.com. </p>
       <a href="https://mail.google.com/mail/u/0/#inbox?compose=GTvVlcSGMhqbzpsGdJxGmWkWcmhTNjPJrlXRMgGQBpmsxbvNtGzllckbvZfVJndRhhQCFxgzZsQbf" class="btn-download" target="_blank" rel="noopener noreferrer">Contact me</a>
