--- a/contact.html
+++ b/contact.html
@@ -140,7 +140,7 @@
 
   <div class="contact-container">
     <div class="card">
-      <img src="page 1 exixtensial crisis konten.png" alt="Instagram" />
+      <img src="instagram logo.png" alt="Instagram" />
       <h2>Instagram </h2>
       <p>Akun Instagram pribadi saya.</p>
       <a href="https://www.instagram.com/argifaiz_/" class="btn-download" target="_blank" rel="noopener noreferrer">Contact me</a>
