--- a/contact.html
+++ b/contact.html
@@ -154,7 +154,7 @@
     </div>
 
     <div class="card">
-      <img src="desain web.png" alt="whatsapp" />
+      <img src="whatsapp logo.jpg" alt="whatsapp" />
       <h2>Whatsapp</h2>
       <p>Whatsapp business</p>
       <a href="https://api.whatsapp.com/send/?phone=6282125416467&text&type=phone_number&app_absent=0" class="btn-download" target="_blank" rel="noopener noreferrer">Contact me</a>
