--- a/contact.html
+++ b/contact.html
@@ -149,7 +149,7 @@
     <div class="card">
       <img src="gmail logo.jpeg" alt="Email" />
       <h2>Email</h2>
-      <p>Email pribadi saya: argifaiz0111@gmail.com. </p>
+      <p>Email pribadi saya: argialghiffari@gmail.com. </p>
       <a href="https://mail.google.com/mail/u/0/#inbox?compose=GTvVlcSGMhqbzpsGdJxGmWkWcmhTNjPJrlXRMgGQBpmsxbvNtGzllckbvZfVJndRhhQCFxgzZsQbf" class="btn-download" target="_blank" rel="noopener noreferrer">Contact me</a>
     </div>
 
